--- a/src/index.html
+++ b/src/index.html
@@ -14,25 +14,24 @@
                 <!-- search bar part  --------------------------------------------------------->
                 <div class="searchWeather">
                     <input type="text" class="search" placeholder="search">
-                    <span class="icon"><i class="bi bi-search"></i></span>
+                    <span class="icon searchIcon"><i class="bi bi-search"></i></span>
                 </div>
                 <!-- degree part  ------------------------------------------------------------->
                 <div class="weatherDegree">
-                    <div class="degree">
+                    <!-- <div class="degree">
                         <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weatherIcon">
                         <h1>12 <span>°C</span></h1>
-                        <h5>Monday <span>16:00 AM</span></h5>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- location part  ----------------------------->
                 <div class="location">
-                    <span><i class="bi bi-geo"></i></span>
-                    <p>Kabul/Afghanistan</p>
+                    <!-- <span><i class="bi bi-geo"></i></span>
+                    <p>Kabul/Afghanistan</p> -->
                 </div>
                 <!-- weather situation part  --------------------------------------------------->
                 <div class="weatherSituation">
-                    <span><i class="bi bi-cloud"></i></span>
-                    <p>Cloudy</p>
+                    <!-- <span><i class="bi bi-cloud"></i></span>
+                    <p>Cloudy</p> -->
                 </div>
             </div>
             <div class="currentWeatherDetails">
@@ -50,36 +49,11 @@
                 </header>
                 <!-- daily and hourly part  ------------------------------------------------------>
                 <div class="timelyWeather">
-                    <div class="single-time">
+                    <!-- <div class="single-time">
                         <h1>Sun</h1>
                         <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="weatherIcon">
                         <p>15°C</p>
-                    </div>
-                    <div class="single-time">
-                        <h1>Sun</h1>
-                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="weatherIcon">
-                        <p>15°C</p>
-                    </div>
-                    <div class="single-time">
-                        <h1>Sun</h1>
-                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="weatherIcon">
-                        <p>15°C</p>
-                    </div>
-                    <div class="single-time">
-                        <h1>Sun</h1>
-                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="weatherIcon">
-                        <p>15°C</p>
-                    </div>
-                    <div class="single-time">
-                        <h1>Sun</h1>
-                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="weatherIcon">
-                        <p>15°C</p>
-                    </div>
-                    <div class="single-time">
-                        <h1>Sun</h1>
-                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="weatherIcon">
-                        <p>15°C</p>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- todays highlights  ----------------------------------->
                 <div class="today-highlight">
@@ -88,8 +62,8 @@
                     <div class="highlights">
                         <!-- single todays weather info  ------------------------->
                         <!-- sunset  -->
-                        <div class="single-items">
-                            <h1>Max/Min Temp</h1>
+                        <div class="single-items minmax">
+                            <!-- <h1>Max/Min Temp</h1>
                             <div>
                                 <span class="icon"><i class="bi bi-thermometer-high"></i></span>
                                 <span>12°C</span>
@@ -97,50 +71,50 @@
                             <div>
                                 <span class="icon"><i class="bi bi-thermometer-low"></i></span>
                                 <span>12°C</span>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- sunrise  -->
-                        <div class="single-items">
-                            <h1>Sunrise/Sunset</h1>
+                        <div class="single-items sunTime">
+                            <!-- <h1>Sunrise/Sunset</h1>
                             <div>
                                 <span class="icon"><i class="bi bi-sunrise-fill"></i></span>
-                                <span>12PM</span>
+                                <span class="sunrise">12PM</span>
                             </div>
                             <div>
                                 <span class="icon"><i class="bi bi-sunset-fill"></i></span>
-                                <span>12PM</span>
-                            </div>
+                                <span class="sunrset">12PM</span>
+                            </div> -->
                         </div>
                         <!-- feels like  -->
                         <div class="single-items">
                             <h1>Feels Like</h1>
-                            <div>
-                                <span class="icon"><i class="bi bi-thermometer"></i></span>
-                                <span class="fleeDegree">12°</span>
+                            <div class="feel-like">
+                                <!-- <span class="icon"><i class="bi bi-thermometer"></i></span>
+                                <span class="fleeDegree">12°</span> -->
                             </div>
                         </div>
                         <!-- humidity  -->
                         <div class="single-items">
                             <h1>Humidity</h1>
-                            <div>
-                                <span class="icon"><i class="bi bi-droplet-fill"></i></span>
-                                <span class="fleeDegree">12<span style="font-size: 1.1rem">%</span></span>
+                            <div class="humidity">
+                                <!-- <span class="icon"><i class="bi bi-droplet-fill"></i></span>
+                                <span class="fleeDegree">12<span style="font-size: 1.1rem">%</span></span> -->
                             </div>
                         </div>
                         <!-- Wind Speed  -->
                         <div class="single-items">
                             <h1>Wind Speed</h1>
-                            <div>
-                                <span class="icon"><i class="bi bi-wind"></i></span>
-                                <span class="fleeDegree">12<span style="font-size: 1.1rem">Km/h</span></span>
+                            <div class="wind">
+                                <!-- <span class="icon"><i class="bi bi-wind"></i></span>
+                                <span class="fleeDegree">12<span style="font-size: 1.1rem">Km/h</span></span> -->
                             </div>
                         </div>
                         <!-- Visibility -->
                         <div class="single-items">
-                            <h1>Visibility</h1>
-                            <div>
-                                <span class="icon"><i class="bi bi-cloud-haze2-fill"></i></span>
-                                <span class="fleeDegree">12<span style="font-size: 1.1rem">Km</span></span>
+                            <h1>Pressure</h1>
+                            <div class="pressure">
+                                <!-- <span class="icon"><i class="bi bi-cloud-haze2-fill"></i></span>
+                                <span class="fleeDegree">12<span style="font-size: 1.1rem">Km</span></span> -->
                             </div>
                         </div>
                     </div>
